# auto-version

./: Cargo.toml  README.md  auto-version.example.toml  auto-version.toml  build.rs  rustfmt.toml
.github/workflows/: ci.yml  release.yml
cmake/: AutoVersion.cmake
examples/cargo-project/: Cargo.toml  build.rs
examples/cargo-project/src/: main.rs
examples/cmake-project/: CMakeLists.txt  auto-version.toml
examples/cmake-project/src/: main.c
examples/submodule-project/: README.md  auto-version.toml
src/: build_rs.rs  lib.rs  main.rs
src/config/: mod.rs  schema.rs
src/formats/: hex.rs  mod.rs
src/outputs/: c_header.rs  cargo_env.rs  cmake_vars.rs  json.rs  kv.rs  makefile_vars.rs  mod.rs  template.rs
src/sources/: c_header.rs  env.rs  file.rs  git.rs  mod.rs  toml_field.rs
src/writers/: mod.rs
