[package]
name = "auto-version"
version = "0.1.0"
edition = "2024"
description = "Multi-format, multi-source automatic version generator"
license = "MIT"
repository = "https://github.com/yourname/auto-version"
keywords = ["versioning", "semver", "git", "build", "cmake"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[features]
default = ["cli"]
# CLI binary (depends on clap)
cli = ["dep:clap"]
# build.rs helper mode: emit cargo: directives automatically
build-rs = []

[[bin]]
name = "auto-version"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "auto_version"
path = "src/lib.rs"

[dependencies]
# CLI (optional — only needed when building the binary)
clap = { version = "4", features = ["derive"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
serde_yaml = "0.9"

# Template engine
tera = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# SemVer parsing
semver = { version = "1", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex (branch rule matching, C header parsing)
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
